--- a/kubeadm/kubeadm-config.yml
+++ b/kubeadm/kubeadm-config.yml
@@ -1,6 +1,12 @@
 apiVersion: kubeadm.k8s.io/v1beta4
 kind: InitConfiguration
+localAPIEndpoint:
+  advertiseAddress: <IP-OF-ENP0S2>
 nodeRegistration:
   kubeletExtraArgs:
     node-ip: <IP-OF-ENP0S2>
-
+---
+apiVersion: kubeadm.k8s.io/v1beta4
+kind: ClusterConfiguration
+networking:
+  podSubnet: "10.244.0.0/16"
