--- a/kubeadm/kubeadm-config.yml
+++ b/kubeadm/kubeadm-config.yml
@@ -4,7 +4,8 @@ localAPIEndpoint:
   advertiseAddress: <IP-OF-ENP0S2>
 nodeRegistration:
   kubeletExtraArgs:
-    node-ip: <IP-OF-ENP0S2>
+    - name: node-ip
+      value: <IP-OF-ENP0S2>
 ---
 apiVersion: kubeadm.k8s.io/v1beta4
 kind: ClusterConfiguration
